Modified SConstruct to include OC and pin libs for servo control

--- a/blink/SConstruct
+++ b/blink/SConstruct
@@ -19,6 +19,8 @@ env.Append(BUILDERS = {'List' : list})
 
 env.Program('blink', ['blink.c',
                       '../lib/timer.c',
-                      '../lib/ui.c'])
+                      '../lib/ui.c',
+					  '../lib/pin.c',
+					  '../lib/oc.c'])
 env.Hex('blink')
 env.List('blink')
